# webrtc-audio-processing

./: .gersemirc  .gitattribute  .gitlab-ci.yml  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  INSTALL.md  Makefile  NEWS.md  README.md  meson.build
cmake/presets/: android-arm64-v8a.json  android-armeabi-v7a.json  android-x86_64.json  common.json  emscripten.json  ios-arm64-static.json  ios-sim64-static.json  linux-clang64-static.json  macos-arm64-static.json  macos-x86_64-static.json  win64-msvc-static.json  win64-ninja-static.json
webrtc/: CMakeLists.txt
webrtc/api/: CMakeLists.txt
webrtc/common_audio/: CMakeLists.txt  meson.build  wav_file.cc  wav_header.cc
webrtc/common_audio/vad/: vad.cc  vad_core.c  vad_core.h  vad_filterbank.c  vad_filterbank.h  webrtc_vad.c
webrtc/common_audio/vad/include/: vad.h  webrtc_vad.h
webrtc/experiments/: CMakeLists.txt  registered_field_trials.h
webrtc/modules/: CMakeLists.txt
webrtc/modules/audio_coding/: CMakeLists.txt
webrtc/modules/audio_processing/: CMakeLists.txt  audio_processing_impl.cc  gain_controller2.cc  meson.build  voice_detection.cc  voice_detection.h
webrtc/modules/audio_processing/aec3/: matched_filter_avx2.cc  matched_filter_lag_aggregator.h
webrtc/modules/audio_processing/agc2/: adaptive_mode_level_estimator.cc  input_volume_stats_reporter.cc
webrtc/modules/audio_processing/include/: audio_processing.cc  audio_processing.h
webrtc/rtc_base/: CMakeLists.txt  meson.build  platform_thread_types.cc  string_utils.h  trace_event.h
webrtc/rtc_base/system/: arch.h  file_wrapper.h  warn_current_thread_is_deadlocked.cc
webrtc/sdk/android/native_api/: CMakeLists.txt
webrtc/system_wrappers/: CMakeLists.txt  meson.build
